MaltProject/src/com/malt/grammar/compiler/MaltParser.java
// $ANTLR 3.5.1 /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g 2023-12-01 14:45:01

	package com.malt.grammar.compiler;
	
	import java.util.Vector;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class MaltParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCKQUOTE", "BOLD", "C", "CL", 
		"CLASS", "CM", "CODE", "CODEBLOCK", "COMMENT", "DIGIT", "DO", "DOTVAR", 
		"EQ", "EQI", "EQL", "ERROR_TK", "ESC_SEQ", "EX", "EXPONENT", "FLOAT", 
		"FOR", "FORMAT", "FORMATTEXT", "FUN", "G", "GET", "HA", "HEX_DIGIT", "HL", 
		"HRULE", "I", "IMG", "IN", "INTEGER", "IT", "ITBOLD", "L", "LAB", "LCB", 
		"LET", "LETTER", "LINK", "LIST", "LP", "LSB", "OCTAL_ESC", "OLIST", "PLUS", 
		"PUSH", "R", "RAB", "RCB", "REMOVE", "RETURN", "RP", "RSB", "S1TITLE", 
		"S2TITLE", "S3TITLE", "S4TITLE", "S5TITLE", "SE", "SL", "ST", "STRING", 
		"SUBS", "SUPS", "TABLE", "TEXT", "TITLE", "TLIST", "ULIST", "UNICODE_ESC", 
		"US", "VAR", "WS"
	};
	public static final int EOF=-1;
	public static final int BLOCKQUOTE=4;
	public static final int BOLD=5;
	public static final int C=6;
	public static final int CL=7;
	public static final int CLASS=8;
	public static final int CM=9;
	public static final int CODE=10;
	public static final int CODEBLOCK=11;
	public static final int COMMENT=12;
	public static final int DIGIT=13;
	public static final int DO=14;
	public static final int DOTVAR=15;
	public static final int EQ=16;
	public static final int EQI=17;
	public static final int EQL=18;
	public static final int ERROR_TK=19;
	public static final int ESC_SEQ=20;
	public static final int EX=21;
	public static final int EXPONENT=22;
	public static final int FLOAT=23;
	public static final int FOR=24;
	public static final int FORMAT=25;
	public static final int FORMATTEXT=26;
	public static final int FUN=27;
	public static final int G=28;
	public static final int GET=29;
	public static final int HA=30;
	public static final int HEX_DIGIT=31;
	public static final int HL=32;
	public static final int HRULE=33;
	public static final int I=34;
	public static final int IMG=35;
	public static final int IN=36;
	public static final int INTEGER=37;
	public static final int IT=38;
	public static final int ITBOLD=39;
	public static final int L=40;
	public static final int LAB=41;
	public static final int LCB=42;
	public static final int LET=43;
	public static final int LETTER=44;
	public static final int LINK=45;
	public static final int LIST=46;
	public static final int LP=47;
	public static final int LSB=48;
	public static final int OCTAL_ESC=49;
	public static final int OLIST=50;
	public static final int PLUS=51;
	public static final int PUSH=52;
	public static final int R=53;
	public static final int RAB=54;
	public static final int RCB=55;
	public static final int REMOVE=56;
	public static final int RETURN=57;
	public static final int RP=58;
	public static final int RSB=59;
	public static final int S1TITLE=60;
	public static final int S2TITLE=61;
	public static final int S3TITLE=62;
	public static final int S4TITLE=63;
	public static final int S5TITLE=64;
	public static final int SE=65;
	public static final int SL=66;
	public static final int ST=67;
	public static final int STRING=68;
	public static final int SUBS=69;
	public static final int SUPS=70;
	public static final int TABLE=71;
	public static final int TEXT=72;
	public static final int TITLE=73;
	public static final int TLIST=74;
	public static final int ULIST=75;
	public static final int UNICODE_ESC=76;
	public static final int US=77;
	public static final int VAR=78;
	public static final int WS=79;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MaltParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MaltParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return MaltParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g"; }



		MaltHandler h;
		
		public MaltHandler getMaltHandler () {
			return h;
		}

		// Override e delega nella gestione degli errori sintattici
		public void displayRecognitionError(String[] tokenNames,
		RecognitionException e) {
			// recupero alcune meta informazioni relative all'errore
			String hdr = " * " + getErrorHeader(e);
			String msg = " - " + getErrorMessage(e, tokenNames);
			
			// recupero il token corrente  
			Token tk = input.LT(1);
			
			// lascio gestire il messaggio all'handler
			h.handleError(tk, hdr, msg);
		}
		
		void initMaltHandler () {
		h = new MaltHandler(input);
		}



	// $ANTLR start "parseJava"
	// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:51:1: parseJava : ( functionRule[null] | declarationRule[null, null, false] | classRule | assignRule[null, null, false] )+ EOF ;
	public final void parseJava() throws RecognitionException {
		initMaltHandler();
		try {
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:53:2: ( ( functionRule[null] | declarationRule[null, null, false] | classRule | assignRule[null, null, false] )+ EOF )
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:54:3: ( functionRule[null] | declarationRule[null, null, false] | classRule | assignRule[null, null, false] )+ EOF
			{
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:54:3: ( functionRule[null] | declarationRule[null, null, false] | classRule | assignRule[null, null, false] )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=5;
				switch ( input.LA(1) ) {
				case FUN:
					{
					alt1=1;
					}
					break;
				case BLOCKQUOTE:
				case CODEBLOCK:
				case DOTVAR:
				case FOR:
				case FORMAT:
				case IMG:
				case LINK:
				case LIST:
				case OLIST:
				case PUSH:
				case REMOVE:
				case S1TITLE:
				case S2TITLE:
				case S3TITLE:
				case S4TITLE:
				case S5TITLE:
				case TABLE:
				case TEXT:
				case TITLE:
				case TLIST:
				case ULIST:
					{
					alt1=2;
					}
					break;
				case VAR:
					{
					int LA1_11 = input.LA(2);
					if ( (LA1_11==LP) ) {
						alt1=2;
					}
					else if ( ((LA1_11 >= EQ && LA1_11 <= EQL)) ) {
						alt1=4;
					}

					}
					break;
				case CLASS:
					{
					alt1=3;
					}
					break;
				}
				switch (alt1) {
				case 1 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:54:4: functionRule[null]
					{
					pushFollow(FOLLOW_functionRule_in_parseJava66);
					functionRule(null);
					state._fsp--;

					}
					break;
				case 2 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:55:5: declarationRule[null, null, false]
					{
					pushFollow(FOLLOW_declarationRule_in_parseJava74);
					declarationRule(null, null, false);
					state._fsp--;

					}
					break;
				case 3 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:56:5: classRule
					{
					pushFollow(FOLLOW_classRule_in_parseJava82);
					classRule();
					state._fsp--;

					}
					break;
				case 4 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:57:5: assignRule[null, null, false]
					{
					pushFollow(FOLLOW_assignRule_in_parseJava89);
					assignRule(null, null, false);
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_parseJava98); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parseJava"



	// $ANTLR start "functionRule"
	// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:62:1: functionRule[Token className] : f= FUN n= VAR LP ( argumentsRule[className, $n] )? RP LCB ( declarationRule[className,$n, false] | assignRule[className, $n, false] )+ ( returnRule[className, $n] )? RCB ;
	public final void functionRule(Token className) throws RecognitionException {
		Token f=null;
		Token n=null;

		try {
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:63:2: (f= FUN n= VAR LP ( argumentsRule[className, $n] )? RP LCB ( declarationRule[className,$n, false] | assignRule[className, $n, false] )+ ( returnRule[className, $n] )? RCB )
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:64:3: f= FUN n= VAR LP ( argumentsRule[className, $n] )? RP LCB ( declarationRule[className,$n, false] | assignRule[className, $n, false] )+ ( returnRule[className, $n] )? RCB
			{
			f=(Token)match(input,FUN,FOLLOW_FUN_in_functionRule116); 
			n=(Token)match(input,VAR,FOLLOW_VAR_in_functionRule123); 
			h.declareFunCl(className,n);
			match(input,LP,FOLLOW_LP_in_functionRule130); 
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:67:3: ( argumentsRule[className, $n] )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==BLOCKQUOTE||LA2_0==CODEBLOCK||LA2_0==FORMATTEXT||LA2_0==IMG||(LA2_0 >= LINK && LA2_0 <= LIST)||LA2_0==OLIST||(LA2_0 >= S1TITLE && LA2_0 <= S5TITLE)||(LA2_0 >= TABLE && LA2_0 <= ULIST)) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:67:4: argumentsRule[className, $n]
					{
					pushFollow(FOLLOW_argumentsRule_in_functionRule135);
					argumentsRule(className, n);
					state._fsp--;

					}
					break;

			}

			match(input,RP,FOLLOW_RP_in_functionRule143); 
			match(input,LCB,FOLLOW_LCB_in_functionRule148); 
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:70:3: ( declarationRule[className,$n, false] | assignRule[className, $n, false] )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=3;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==BLOCKQUOTE||LA3_0==CODEBLOCK||LA3_0==DOTVAR||(LA3_0 >= FOR && LA3_0 <= FORMAT)||LA3_0==IMG||(LA3_0 >= LINK && LA3_0 <= LIST)||LA3_0==OLIST||LA3_0==PUSH||LA3_0==REMOVE||(LA3_0 >= S1TITLE && LA3_0 <= S5TITLE)||(LA3_0 >= TABLE && LA3_0 <= ULIST)) ) {
					alt3=1;
				}
				else if ( (LA3_0==VAR) ) {
					int LA3_11 = input.LA(2);
					if ( (LA3_11==LP) ) {
						alt3=1;
					}
					else if ( ((LA3_11 >= EQ && LA3_11 <= EQL)) ) {
						alt3=2;
					}

				}

				switch (alt3) {
				case 1 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:70:5: declarationRule[className,$n, false]
					{
					pushFollow(FOLLOW_declarationRule_in_functionRule155);
					declarationRule(className, n, false);
					state._fsp--;

					}
					break;
				case 2 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:71:5: assignRule[className, $n, false]
					{
					pushFollow(FOLLOW_assignRule_in_functionRule163);
					assignRule(className, n, false);
					state._fsp--;

					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:72:3: ( returnRule[className, $n] )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==RETURN) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:72:3: returnRule[className, $n]
					{
					pushFollow(FOLLOW_returnRule_in_functionRule171);
					returnRule(className, n);
					state._fsp--;

					}
					break;

			}

			match(input,RCB,FOLLOW_RCB_in_functionRule178); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionRule"



	// $ANTLR start "argumentsRule"
	// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:77:1: argumentsRule[Token className, Token functionName] : t= argumentTypeRule n= VAR ( CM t= argumentTypeRule n= VAR )* ;
	public final void argumentsRule(Token className, Token functionName) throws RecognitionException {
		Token n=null;
		Token t =null;

		try {
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:78:2: (t= argumentTypeRule n= VAR ( CM t= argumentTypeRule n= VAR )* )
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:79:3: t= argumentTypeRule n= VAR ( CM t= argumentTypeRule n= VAR )*
			{
			pushFollow(FOLLOW_argumentTypeRule_in_argumentsRule197);
			t=argumentTypeRule();
			state._fsp--;

			n=(Token)match(input,VAR,FOLLOW_VAR_in_argumentsRule204); 
			h.declareArg(className, functionName, t, n);
			// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:81:3: ( CM t= argumentTypeRule n= VAR )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CM) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:81:5: CM t= argumentTypeRule n= VAR
					{
					match(input,CM,FOLLOW_CM_in_argumentsRule213); 
					pushFollow(FOLLOW_argumentTypeRule_in_argumentsRule222);
					t=argumentTypeRule();
					state._fsp--;

					n=(Token)match(input,VAR,FOLLOW_VAR_in_argumentsRule231); 
					h.declareArg(className, functionName, t, n);
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "argumentsRule"



	// $ANTLR start "argumentTypeRule"
	// /home/kevin/Documenti/malt/MaltProject/src/com/malt/grammar/compiler/Malt.g:87:1: argumentTypeRule returns [Token type] : (res= titleTypeRule |t= ( TEXT | BLOCKQUOTE | OLIST | ULIST | TLIST | CODEBLOCK | LINK | IMG | TABLE | FORMATTEXT | LIST ) ) ;
	public final Token argumentTypeRule() throws RecognitionException {
		Token type = null;


		Token t=null;
		Token res =null;
